# COMP_438_Project

./: .gitIgnore  CMakeLists.txt  README.md  blender_manifest.toml  vineGen_addon.py
blender_addon/: __init__.py
core/: geometry.cpp  geometry.hpp  half_edge.cpp  half_edge.hpp  lsystem.cpp  lsystem.hpp
docs/: design_doc.md
models/: Leaf.blend  Leaf.blend1  flower.blend  flower.blend1
src/: Turt.cpp  Turt.h  __init__.py  main.cpp  node.cpp  node.h  vine.cpp  vine.h  vineGen.cpp  vineGen.h
vineGen/: __init__.py
web/: index.html  style.css
